fix: status spinner too big

--- a/web_client/src/components/status/status.scss
+++ b/web_client/src/components/status/status.scss
@@ -10,17 +10,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+  }
 
-    .spinner-border {
-      width: 1.5rem;
-      height: 1.5rem;
-    }
-
-    > .bi::before {
-      font-size: 25px;
-    }
+  .spinner-border {
+    width: 1rem;
+    height: 1rem;
   }
 }
 
@@ -32,8 +26,8 @@
   }
 
   label {
-    font-weight: bold;
     font-size: 1.1rem;
     vertical-align: middle;
+    letter-spacing: 1px;
   }
 }
